fix z-index

--- a/src/pages/seller-add-product/seller-add-product.css
+++ b/src/pages/seller-add-product/seller-add-product.css
@@ -121,7 +121,7 @@ main>form>input[type=submit] {
 }
 
 nav {
-    z-index: 3 !important;
+    z-index: 5 !important;
 }
 
 main>form>p {
